<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jp.dev.juny.android.uca.UcaViewActivity" >

    <item android:id="@+id/action_recordings"
        android:title="@string/action_recordings"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="always|withText" />
    <item android:id="@+id/action_calendar"
        android:title="@string/action_calendar"
        android:orderInCategory="101"
        android:icon="@android:drawable/ic_menu_month"
        android:showAsAction="always|withText" />
    <item android:id="@+id/action_chart"
        android:title="@string/action_chart"
        android:orderInCategory="102"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="103"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="ifRoom|withText" />
</menu>
